Style scrollbar to avoid the native one

--- a/GOES-X/wwwroot/css/app.css
+++ b/GOES-X/wwwroot/css/app.css
@@ -5,6 +5,21 @@
     src: url("red-hat/RedHatText-VariableFont_wght.ttf");
 }
 
+html::-webkit-scrollbar {
+    width: 4px;
+    background: #000;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: rgb(128, 128, 128, 0.3);
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+html::-webkit-scrollbar-corner {
+    background: #000;
+}
+
 html, body {
     font-family: "Red Hat", Helvetica, Arial, sans-serif;
     height: 100%;
